--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ gunicorn
 numpy
 Pillow
 # https://download.pytorch.org/whl/cpu/torch-1.0.0-cp37-cp37m-linux_x86_64.whl
-https://download.pytorch.org/whl/cpu
+pip3 install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cpu
